# NetAutoLab

./: .gitignore  Ctrl + O  pyproject.toml
config/: default.yaml
inventory/: lab.yml
src/netautolab/: cli.py  config.py  connectivity.py  doctor.py  inventory.py  ssh.py
src/netautolab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/netautolab/commands/: version.py
